RESOLVED FIXED165607
[CSS Parser] REGRESSION: Values of 0 should not be allowed for -webkit-aspect-ratio
https://bugs.webkit.org/show_bug.cgi?id=165607
Summary [CSS Parser] REGRESSION: Values of 0 should not be allowed for -webkit-aspect...
Dave Hyatt
Reported 2016-12-08 09:36:06 PST
[CSS Parser] REGRESSION: Values of 0 should not be allowed for -webkit-aspect-ratio
Attachments
Patch (3.18 KB, patch)
2016-12-08 09:38 PST, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2016-12-08 09:38:00 PST
Dave Hyatt
Comment 2 2016-12-08 09:47:36 PST
Fixed in r209541.
Note You need to log in before you can comment on or make changes to this bug.