[CSS Parser] REGRESSION: Values of 0 should not be allowed for -webkit-aspect-ratio https://bugs.webkit.org/show_bug.cgi?id=165607

Reviewed by Simon Fraser.

Source/WebCore:

Unskipped fast/css/aspect-ratio-parsing-tests.html.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeWebkitAspectRatio):
Don't allow 0 as either the left or right value of the ratio.

LayoutTests:

* TestExpectations:



Canonical link: https://commits.webkit.org/183203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209541 268f45cc-cd09-0410-ab3c-d52691b4dbfc